# barista

./: angular.json  package-lock.json  package.json  tsconfig.base.json
.circleci/: config.yml
.storybook/: main.js  preview-head.html  preview.js
apps/components-e2e/src/app/: app.routing.module.ts
apps/demos/src/: app-routing.module.ts  nav-items.ts
apps/design-system/_includes/components/: nav.njk
apps/design-system/_includes/layouts/: component.njk
apps/design-system/_scripts/: main.ts
apps/design-system/_styles/: _layouts.scss  _sidebar.scss  _top-navigation.scss
apps/dev/src/breadcrumbs/: breadcrumbs-demo.component.html
apps/dev/src/datepicker/: datepicker-demo.component.html  datepicker-demo.component.ts
libs/barista-components/filter-field/: README.md
libs/barista-components/style/: themes.scss
libs/examples/src/: index.ts
libs/fluid-elements/: BUILD.bazel  rollup.config.js
libs/fluid-elements/.storybook/: main.js  preview-head.html  preview.js
libs/fluid-elements/button/: BUILD.bazel  tsconfig.lib.json
libs/fluid-elements/button/src/lib/: button.ts
libs/fluid-elements/button/stories/: index.stories.mdx
libs/fluid-elements/checkbox/src/lib/: checkbox.ts
libs/fluid-elements/core/: BUILD.bazel  README.md  jest.config.js  package.json
libs/fluid-elements/core/src/: fluid-element.ts  index.ts
libs/fluid-elements/core/src/util/: dom.ts  object.ts
libs/fluid-elements/provider/: BUILD.bazel  README.md  jest.config.js  package.json
libs/fluid-elements/provider/src/: index.ts
libs/fluid-elements/provider/src/lib/: provider-events.ts  provider.ts  token-accessor.ts
libs/fluid-elements/shared/: BUILD.bazel  jest.config.js  package.json
libs/fluid-elements/shared/src/: index.ts
libs/fluid-elements/shared/src/util/: dom.ts  index.ts  object.ts
libs/fluid-elements/switch/src/lib/: switch.ts
libs/fluid-elements/tab-group/: README.md
libs/fluid-elements/tab-group/src/lib/: tab-events.ts
libs/fluid-elements/tab-group/src/lib/tab/: tab.spec.ts  tab.ts
libs/fluid-elements/tab-group/src/lib/tab-group/: tab-group.spec.ts  tab-group.ts
(+59 files in other folders)
